# swiss-urban-trees

./: .envrc  .pre-commit-config.yaml  README.md  Snakefile  environment.yml  pyproject.toml
data/raw/: label-config.xml
notebooks/: label-studio-export.ipynb  label-studio-init.ipynb  lidar-to-crown.ipynb  multi-species-initial-tiles.ipynb  multi-species-model.ipynb  train-crown.ipynb  train-test-split.ipynb  wfs-download.ipynb  wms-download.ipynb
swiss_urban_trees/: __init__.py  canopy_utils.py  deepforest_utils.py  geo_utils.py  label_studio_utils.py  plot.py  sample.py  settings.py  stac_utils.py  utils.py  wms.py
