[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swiss-urban-trees"
version = "0.1.0"
description = "Urban tree crown detection and species identification from aerial imagery in Switzerland using deep learning"
authors = [{name = "Martí Bosch", email = "marti.bosch@epfl.ch"}]
readme = "README.md"
license = {text = "GPL-3.0-only"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/martibosch/swiss-urban-trees"

[tool.nbqa.addopts]
# ignore documentation errors in notebooks
ruff = ["--ignore=D"]

[tool.ruff]
line-length = 88
select = ["D", "E", "F", "I"]

[tool.ruff.isort]
known-first-party = ["swiss_urban_trees"]

[tool.setuptools.packages.find]
include = ["swiss_urban_trees", "swiss_urban_trees.*"]
